{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 794,
  "lineage": "88114ec5-e297-e50d-f228-85571bc86cb5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "juno-alb-web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec/20b5780af2cec74b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec/20b5780af2cec74b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "DEV",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.dev_juno_alb_web_pub",
            "module.alb.aws_lb_target_group.dev_juno_alb_web_tg_80",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_juno_alb_web_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec",
            "arn_suffix": "app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "DEV-JUNO-ALBWEB-PUB-1984832609.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DEV-JUNO-ALBWEB-PUB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fc94462339f60209"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0353c4d27c013d057"
              },
              {
                "subnet_id": "subnet-085357ba2c3064d21"
              }
            ],
            "subnets": [
              "subnet-0353c4d27c013d057",
              "subnet-085357ba2c3064d21"
            ],
            "tags_all": {
              "Environment": "DEV",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_juno_alb_web_tg_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498",
            "arn_suffix": "targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/app/DEV-JUNO-ALBWEB-PUB/6058036beae3b9ec"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "JUNO-ALB-WEB-TG-80",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "DEV-JUNO-ALB-WEB-TG-80"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-ALB-WEB-TG-80",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_juno_alb_web_tg_80_atth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498-20241002020006587400000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498",
            "target_id": "i-07ea317dbec1042c2"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.dev_juno_alb_web_tg_80",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_web_ec2",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub",
            "module.web.aws_instance.dev_juno_ec2"
          ]
        },
        {
          "index_key": "web2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498-20241002020006542500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-ALB-WEB-TG-80/77354666f1285498",
            "target_id": "i-09068cf506141192a"
          },
          "dependencies": [
            "module.alb.aws_lb_target_group.dev_juno_alb_web_tg_80",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_web_ec2",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub",
            "module.web.aws_instance.dev_juno_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_juno_ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d737d4d8119ad79",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-0d78b6824d03c0065",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d78b6824d03c0065",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "94102047-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0526f18d1368d3ea2",
            "private_dns": "ip-10-0-10-206.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.206",
            "public_dns": "ec2-43-203-179-3.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.179.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags_all": {
                  "Environment": "DEV",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-036790e7c09883ae6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-085357ba2c3064d21",
            "tags": {
              "Name": "DEV-JUNO-EC2-AZ1-BASTION"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-EC2-AZ1-BASTION",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0814f01ea70a078bb"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_juno_eip_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e8e211c6ba5beed",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:elastic-ip/eipalloc-05e8e211c6ba5beed",
            "association_id": "eipassoc-0e7f8ccd9cef30eb4",
            "domain": "vpc",
            "id": "eipalloc-05e8e211c6ba5beed",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-00a7ad66abd63c6c5",
            "private_dns": "ip-10-0-10-135.ap-northeast-2.compute.internal",
            "private_ip": "10.0.10.135",
            "public_dns": "ec2-3-35-90-183.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.90.183",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV-JUNO-EIP-NGW"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-EIP-NGW",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_juno_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:internet-gateway/igw-07ff512fddcedcadd",
            "id": "igw-07ff512fddcedcadd",
            "owner_id": "637423403127",
            "tags": {
              "Name": "DEV-JUNO-IGW"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-IGW",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_juno_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e8e211c6ba5beed",
            "association_id": "eipassoc-0e7f8ccd9cef30eb4",
            "connectivity_type": "public",
            "id": "nat-04bc0d850dd88a925",
            "network_interface_id": "eni-00a7ad66abd63c6c5",
            "private_ip": "10.0.10.135",
            "public_ip": "3.35.90.183",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-085357ba2c3064d21",
            "tags": {
              "Name": "DEV-JUNO-NGW"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-NGW",
              "Owner": "94102047",
              "Project": "JUNO"
            }
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_juno_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-0c9870c72056a55d5",
            "id": "rtb-0c9870c72056a55d5",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bc0d850dd88a925",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-JUNO-RTB-DB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-RTB-DB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "public_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-00c9e64a9fac695b5",
            "id": "rtb-00c9e64a9fac695b5",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07ff512fddcedcadd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-JUNO-RTB-PUB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-RTB-PUB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "was_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-0607b7c07a4780d34",
            "id": "rtb-0607b7c07a4780d34",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bc0d850dd88a925",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-JUNO-RTB-WAS"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-RTB-WAS",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "web_rt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:route-table/rtb-0d85aa3c1d0d2c0cc",
            "id": "rtb-0d85aa3c1d0d2c0cc",
            "owner_id": "637423403127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04bc0d850dd88a925",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV-JUNO-RTB-WEB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-RTB-WEB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_juno_rtb_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db_subnet_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abbe2c0a3c1198d2",
            "route_table_id": "rtb-0c9870c72056a55d5",
            "subnet_id": "subnet-0fc30c9446aa27f24"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "db_subnet_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000571da37618af06",
            "route_table_id": "rtb-0c9870c72056a55d5",
            "subnet_id": "subnet-00c668b6a35ee3c81"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "public_subnet_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0015e964d8a737f1f",
            "route_table_id": "rtb-00c9e64a9fac695b5",
            "subnet_id": "subnet-085357ba2c3064d21"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "public_subnet_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0959433f50ffab66d",
            "route_table_id": "rtb-00c9e64a9fac695b5",
            "subnet_id": "subnet-0353c4d27c013d057"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "was_subnet_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04de72593d337780d",
            "route_table_id": "rtb-0607b7c07a4780d34",
            "subnet_id": "subnet-05f1caf8dcba4c63c"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "was_subnet_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035beee97f1493da5",
            "route_table_id": "rtb-0607b7c07a4780d34",
            "subnet_id": "subnet-0c2cf25f62dd92054"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "web_subnet_a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc77e8a1fe4dd9a",
            "route_table_id": "rtb-0d85aa3c1d0d2c0cc",
            "subnet_id": "subnet-08d1d42bf0c548243"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "web_subnet_c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dfd96ef9b3ea38e",
            "route_table_id": "rtb-0d85aa3c1d0d2c0cc",
            "subnet_id": "subnet-091f69dd395b09505"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_juno_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db_subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0fc30c9446aa27f24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.70.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc30c9446aa27f24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-A-DB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-A-DB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "db_subnet_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-00c668b6a35ee3c81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.80.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c668b6a35ee3c81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-C-DB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-C-DB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "public_subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-085357ba2c3064d21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085357ba2c3064d21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-A-PUB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-A-PUB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "public_subnet_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0353c4d27c013d057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0353c4d27c013d057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-C-PUB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-C-PUB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "was_subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-05f1caf8dcba4c63c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f1caf8dcba4c63c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-A-WAS"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-A-WAS",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "was_subnet_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-0c2cf25f62dd92054",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2cf25f62dd92054",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-C-WAS"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-C-WAS",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "web_subnet_a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-08d1d42bf0c548243",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d1d42bf0c548243",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-A-WEB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-A-WEB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        },
        {
          "index_key": "web_subnet_c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:subnet/subnet-091f69dd395b09505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091f69dd395b09505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423403127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV-JUNO-SBN-C-WEB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SBN-C-WEB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_juno_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:vpc/vpc-09274d229006ba199",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bcb1e533e690c17",
            "default_route_table_id": "rtb-05c224e31b38fb899",
            "default_security_group_id": "sg-092da4e0be8f3d5cc",
            "dhcp_options_id": "dopt-09bc5c4d3ccca2488",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09274d229006ba199",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c224e31b38fb899",
            "owner_id": "637423403127",
            "tags": {
              "Name": "DEV-JUNO-VPC"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-VPC",
              "Owner": "94102047",
              "Project": "JUNO"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dev_juno_gw_vpcep_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:vpc-endpoint/vpce-0ed1f6dfa3b5a7b13",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-0ed1f6dfa3b5a7b13",
            "owner_id": "637423403127",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0607b7c07a4780d34",
              "rtb-0d85aa3c1d0d2c0cc"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Name": "DEV-JUNO-VPCE-S3"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-VPCE-S3",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_eip.dev_juno_eip_ngw",
            "module.network.aws_internet_gateway.dev_juno_igw",
            "module.network.aws_nat_gateway.dev_juno_ngw",
            "module.network.aws_route_table.dev_juno_rtb",
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "juno-nlb-was-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b/52701e4cbe5f4784",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:listener/net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b/52701e4cbe5f4784",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "DEV",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.nlb.aws_lb.dev_juno_nlb_was_pri",
            "module.nlb.aws_lb_target_group.dev_juno_nlb_was_tg_8080",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_juno_nlb_was_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b",
            "arn_suffix": "net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b",
            "dns_name": "DEV-JUNO-NLBWAS-PRI-a34244f3e5af2e5b.elb.ap-northeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "DEV-JUNO-NLBWAS-PRI",
            "security_groups": [
              "sg-07e266b20ca2312bb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08d1d42bf0c548243"
              },
              {
                "subnet_id": "subnet-091f69dd395b09505"
              }
            ],
            "subnets": [
              "subnet-08d1d42bf0c548243",
              "subnet-091f69dd395b09505"
            ],
            "tags_all": {
              "Environment": "DEV",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "vpc_id": "vpc-09274d229006ba199",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_juno_nlb_was_tg_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99",
            "arn_suffix": "targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:loadbalancer/net/DEV-JUNO-NLBWAS-PRI/a34244f3e5af2e5b"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "JUNO-NLB-WAS-TG-8080",
            "port": 8080,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "DEV-JUNO-NLB-WAS-TG-8080"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-NLB-WAS-TG-8080",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09274d229006ba199"
          },
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_juno_nlb_was_tg_8080_atth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "was1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99-20241002080400200600000001",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99",
            "target_id": "i-0af016a00d9e4cf73"
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.nlb.aws_lb_target_group.dev_juno_nlb_was_tg_8080",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_was_ec2",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri",
            "module.was.aws_instance.dev_juno_ec2"
          ]
        },
        {
          "index_key": "was2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99-20241002080400248600000002",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:637423403127:targetgroup/JUNO-NLB-WAS-TG-8080/fb46b3ac28d57a99",
            "target_id": "i-04ea1f87e718a0973"
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.nlb.aws_lb_target_group.dev_juno_nlb_was_tg_8080",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_was_ec2",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri",
            "module.was.aws_instance.dev_juno_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_juno_sg_bastion_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0814f01ea70a078bb",
            "description": "DEV-JUNO-SG-BASTION-EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0814f01ea70a078bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "27.122.137.92/32"
                ],
                "description": "NCLOUD",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DEV-JUNO-SG-BASTION-EC2",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-JUNO-SG-BASTION-EC2"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SG-BASTION-EC2",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_juno_sg_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0a942284216c444f0",
            "description": "DEV-JUNO-SG-RDS",
            "egress": [],
            "id": "sg-0a942284216c444f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.50.0/24"
                ],
                "description": "WAS A CIDR",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "10.0.60.0/24"
                ],
                "description": "WAS C CIDR",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DEV-JUNO-SG-RDS",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-JUNO-SG-RDS"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SG-RDS",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_juno_sg_was_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0b3320b816f931f02",
            "description": "DEV-JUNO-SG-WAS-EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3320b816f931f02",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0814f01ea70a078bb"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "PRIVATE WAS NLB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07e266b20ca2312bb"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-JUNO-SG-WAS-EC2",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-JUNO-SG-WAS-EC2"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SG-WAS-EC2",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_juno_sg_wasnlb_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-07e266b20ca2312bb",
            "description": "DEV-JUNO-SG-WASNLB-PRI",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e266b20ca2312bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.30.0/24"
                ],
                "description": "WEB A CIDR",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.40.0/24"
                ],
                "description": "WEB C CIDR",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "DEV-JUNO-SG-WASNLB-PRI",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-JUNO-SG-WASNLB-PRI"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SG-WASNLB-PRI",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_juno_sg_web_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-07caa792c3a6f4ff7",
            "description": "DEV-JUNO-SG-WEB-EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07caa792c3a6f4ff7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0814f01ea70a078bb"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "PUBLIC WEB ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc94462339f60209"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "PUBLIC WEB ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fc94462339f60209"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DEV-JUNO-SG-WEB-EC2",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-JUNO-SG-WEB-EC2"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SG-WEB-EC2",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_juno_sg_webalb_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:security-group/sg-0fc94462339f60209",
            "description": "DEV-JUNO-SG-WEBALB-PUB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc94462339f60209",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DEV-JUNO-SG-WEBALB-PUB",
            "name_prefix": "",
            "owner_id": "637423403127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-JUNO-SG-WEBALB-PUB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-SG-WEBALB-PUB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "timeouts": null,
            "vpc_id": "vpc-09274d229006ba199"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.dev_juno_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.was",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_juno_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "was1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d737d4d8119ad79",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-0af016a00d9e4cf73",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af016a00d9e4cf73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "94102047-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-067805e2e58fffaad",
            "private_dns": "ip-10-0-50-240.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.50.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags_all": {
                  "Environment": "DEV",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-032af59379a8df187",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f1caf8dcba4c63c",
            "tags": {
              "Name": "DEV-JUNO-EC2-AZ1-WAS"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-EC2-AZ1-WAS",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3320b816f931f02"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_was_ec2",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri"
          ]
        },
        {
          "index_key": "was2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d737d4d8119ad79",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-04ea1f87e718a0973",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04ea1f87e718a0973",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "94102047-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a94ff2c2d8bd817",
            "private_dns": "ip-10-0-60-188.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.60.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags_all": {
                  "Environment": "DEV",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-0ede4556944c5d0e9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2cf25f62dd92054",
            "tags": {
              "Name": "DEV-JUNO-EC2-AZ3-WAS"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-EC2-AZ3-WAS",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3320b816f931f02"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_was_ec2",
            "module.sg.aws_security_group.dev_juno_sg_wasnlb_pri"
          ]
        }
      ]
    },
    {
      "module": "module.web",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_juno_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d737d4d8119ad79",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-07ea317dbec1042c2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags": {
                  "Owner": "Role_IaC_TFT"
                },
                "tags_all": {
                  "Environment": "DEV",
                  "Owner": "Role_IaC_TFT",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-0e3bb863acbd3554b",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ea317dbec1042c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "94102047-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0afcc6e5bc3cad21d",
            "private_dns": "ip-10-0-30-210.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags_all": {
                  "Environment": "DEV",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-019bddac69952caf0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08d1d42bf0c548243",
            "tags": {
              "Name": "DEV-JUNO-EC2-AZ1-WEB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-EC2-AZ1-WEB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07caa792c3a6f4ff7"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_web_ec2",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub"
          ]
        },
        {
          "index_key": "web2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07d737d4d8119ad79",
            "arn": "arn:aws:ec2:ap-northeast-2:637423403127:instance/i-09068cf506141192a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags": {
                  "Owner": "Role_IaC_TFT"
                },
                "tags_all": {
                  "Environment": "DEV",
                  "Owner": "Role_IaC_TFT",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-09ba3b9ba2c6f80a3",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09068cf506141192a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "94102047-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ba543b133aaf9677",
            "private_dns": "ip-10-0-40-151.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.40.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-northeast-2:637423403127:key/939c560c-8cde-41dc-b1dc-6bdf92c51e5a",
                "tags_all": {
                  "Environment": "DEV",
                  "Project": "JUNO"
                },
                "throughput": 125,
                "volume_id": "vol-0fb40759ac7f85062",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091f69dd395b09505",
            "tags": {
              "Name": "DEV-JUNO-EC2-AZ3-WEB"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "DEV-JUNO-EC2-AZ3-WEB",
              "Owner": "94102047",
              "Project": "JUNO"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07caa792c3a6f4ff7"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.dev_juno_subnet",
            "module.network.aws_vpc.dev_juno_vpc",
            "module.sg.aws_security_group.dev_juno_sg_bastion_ec2",
            "module.sg.aws_security_group.dev_juno_sg_web_ec2",
            "module.sg.aws_security_group.dev_juno_sg_webalb_pub"
          ]
        }
      ]
    }
  ]
}